--- a/package.json
+++ b/package.json
@@ -6,6 +6,12 @@
 	"license": "MIT",
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "./node_modules/mocha/bin/mocha tests.js"
+	},
+	"devDependencies": {
+		"chai": "^4.3.4",
+		"mocha": "^8.4.0",
+		"nock": "^13.0.11",
+		"sinon": "^10.0.0"
 	}
 }
